--- a/tips/tips/Base.lproj/Main.storyboard
+++ b/tips/tips/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="I5s-MK-UAR">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -80,6 +80,7 @@
                             <outletCollection property="gestureRecognizers" destination="D4t-7L-sXs" appends="YES" id="n6u-1t-4Zx"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="v8E-p5-jjq"/>
                     <connections>
                         <outlet property="billField" destination="TdR-xY-aGb" id="Fot-J7-62R"/>
                         <outlet property="tipControl" destination="5OP-Or-H4G" id="bKi-VZ-KTQ"/>
@@ -93,6 +94,24 @@
                         <action selector="onTap:" destination="vXZ-lx-hvc" id="piZ-XG-fdJ"/>
                     </connections>
                 </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="593" y="334"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZoW-zz-P2d">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I5s-MK-UAR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6ls-e3-NYW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="ytK-lO-LaS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yYq-Tt-Su4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="61" y="334"/>
         </scene>
